crates/lang/macro/tests/ui/trait_def/fail/definition_empty.stderr
error: encountered invalid empty ink! trait definition
 --> $DIR/definition_empty.rs:4:1
  |
4 | pub trait TraitDefinition {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
